chore(pom): remove old argLine configurations for surefire plugin