@@ -21,14 +21,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.4</version>
-                <configuration>
-                    <argLine>
-                        --add-opens edu.ntnu.idi.idatt2003.millions/edu.ntnu.idi.idatt2003.millions.model=org.junit.platform.commons
-                        --add-opens edu.ntnu.idi.idatt2003.millions/edu.ntnu.idi.idatt2003.millions.model.calculator=org.junit.platform.commons
-                        --add-opens edu.ntnu.idi.idatt2003.millions/edu.ntnu.idi.idatt2003.millions.controller=org.junit.platform.commons
-                        --add-opens edu.ntnu.idi.idatt2003.millions/edu.ntnu.idi.idatt2003.millions.exception=org.junit.platform.commons
-                    </argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
